--- a/Assessment_one/Views/Shared/_Layout.cshtml
+++ b/Assessment_one/Views/Shared/_Layout.cshtml
@@ -8,26 +8,37 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Adventure Works", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Products", "About", "Home")</li>
-                    <li>@Html.ActionLink("Search", "Contact", "Home")</li>
-                </ul>
-            </div>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("Adventure Works", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Products", "Products", "Home")</li>
+                <li>@Html.ActionLink("Search", "Search", "Home")</li>
+            </ul>
         </div>
     </div>
-    <div class="container body-content">
+</div>
+
+<div class="home-header-wrap">
+
+    <div class="header-content-wrap">
+        <div class="container">
+            <img src="/Content/Images/ats-adventureworks-header-02.png" style="vertical-align: middle; width: 59%; margin-left: 200px; margin-top: 20px;"/>
+        </div>
+    </div>
+    <div class="clear"></div>
+</div>
+
+<div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
