View Edit,Table Addition

--- a/Assessment_one/Views/Product/Index.cshtml
+++ b/Assessment_one/Views/Product/Index.cshtml
@@ -6,3 +6,24 @@
 }
 
 <h2>title</h2>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Product Number</th>
+        <th>Color</th>
+        <th>In Stock</th>
+        <th>Stock Available</th>
+        <th>Cost</th>
+    </tr>
+    </thead>
+    
+    <tbody>
+    @foreach (var Production in Model.Products)
+    {
+  
+    }
+    </tbody>
+</table>
+
