Model and Entity changes

--- a/Assessment_one/Views/Home/Index.cshtml
+++ b/Assessment_one/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         </p>
         <p>
             <ul class="btn">
-                @Html.ActionLink("View", "Index", "Home", null, new { @class = "btn btn-success" })
+                @Html.ActionLink("View", "Index", "Product", null, new { @class = "btn btn-success" })
             </ul>
         </p>
     </div>
